Writing through news summaries

--- a/2025/2025-11-09-wir.md
+++ b/2025/2025-11-09-wir.md
@@ -23,25 +23,25 @@ Outflows from U.S.-listed bitcoin funds led the selloff, effectively extending a
 
 ### Week in Review: Nov. 2-8, 2025
 
-- Standard Chartered says there could be a $1T shift to stablecoins in emerging markets: https://www.forbes.com/sites/digital-assets/2025/11/07/stablecoin-financial-inclusion-friend-or-foe/ <!-- Wrap in other stablecoin news --> | Italy's banks said they back a digital euro, but they want to spread costs out over time. https://www.reuters.com/business/finance/italys-banks-back-digital-euro-want-costs-spread-over-time-2025-11-08/
+- Standard Chartered says there could be a $1T shift to stablecoins in emerging markets: https://www.forbes.com/sites/digital-assets/2025/11/07/stablecoin-financial-inclusion-friend-or-foe/ <!-- Wrap in other stablecoin news --> | Italy's banks said they back a digital euro, but they want to spread costs out over time. https://www.reuters.com/business/finance/italys-banks-back-digital-euro-want-costs-spread-over-time-2025-11-08/ ([Reuters]()) - **Bank of England urges closer UK–US stablecoin collaboration** [https://www.reuters.com/sustainability/boards-policy-regulation/bank-englands-breeden-bangs-drum-uk-us-stablecoin-collaboration-2025-11-05/](https://www.reuters.com/sustainability/boards-policy-regulation/bank-englands-breeden-bangs-drum-uk-us-stablecoin-collaboration-2025-11-05/)
+  The BoE’s deputy governor Sarah Breeden emphasised the “really important” need for the U.K. and the U.S. to align on regulation of stablecoins. This underscores how regulatory convergence (or divergence) is becoming a frontline issue in the token-economy.
+  ([Reuters][4])[4]: https://www.reuters.com/sustainability/boards-policy-regulation/bank-englands-breeden-bangs-drum-uk-us-stablecoin-collaboration-2025-11-05/?utm_source=chatgpt.com "Bank of England's Breeden urges closer UK-US stablecoin collaboration" <!-- ChatGPT
+ **Japan’s crypto players jostle for market share on hopes of regulatory easing**
+  [https://www.reuters.com/business/finance/japans-crypto-players-jostle-market-share-regulatory-easing-hopes-2025-11-04/](https://www.reuters.com/business/finance/japans-crypto-players-jostle-market-share-regulatory-easing-hopes-2025-11-04/)
+  As Japan signals possible regulatory loosening, crypto firms are positioning aggressively in its market. The story highlights the dynamic interplay between regulation and blockchain business growth in the Asia region.
+  ([Reuters][5])[5]: https://www.reuters.com/business/finance/japans-crypto-players-jostle-market-share-regulatory-easing-hopes-2025-11-04/?utm_source=chatgpt.com "Japan's crypto players jostle for market share on regulatory easing hopes" <!-- ChatGPT   [https://timesofindia.indiatimes.com/technology/tech-news/polygon-anq-developing-sovereign-backed-indian-stablecoin-model-tied-to-government-securities-say-sources/articleshow/125105642.cms](https://timesofindia.indiatimes.com/technology/tech-news/polygon-anq-developing-sovereign-backed-indian-stablecoin-model-tied-to-government-securities-say-sources/articleshow/125105642.cms)
+  This initiative in India would link a blockchain-token (tentatively the “Asset Reserve Certificate” or ARC) to government securities/Treasury Bills, representing a hybrid of public-finance and blockchain innovation. A strong signal of where tokenisation meets sovereign infrastructure.
+  ([The Times of India][6])[6]: https://timesofindia.indiatimes.com/technology/tech-news/polygon-anq-developing-sovereign-backed-indian-stablecoin-model-tied-to-government-securities-say-sources/articleshow/125105642.cms?utm_source=chatgpt.com "Polygon, Anq developing sovereign-backed Indian 'stablecoin' model tied to government securities, say sources" <!-- ChatGPT
 
-- Michael Burry, a renowned hedge fund manager, has disclosed a $1.1 billion short position against AI darlings Nvidia and Palantir Technologies, citing concerns over market bubbles and "circular financing" in the tech industry. The move has sparked a sell-off in tech markets, with Palantir dropping as much as 16% and Nvidia experiencing a more modest decline, as investors become increasingly cautious about buying at valuation extremes. https://decrypt.co/347888/big-short-guy-bet-1-1-billion-against-ai-giants-markets-still-absorbing <!-- Story curated by me. Draft summary by Leo/Llama 3.1 8B -->
+- Researchers at Columbia University have found that a quarter of trades on Polymarket, a popular prediction platform, may be the result of wash trading, a practice where users artificially inflate activity to qualify for rewards. This suspicious activity peaked at nearly 60% of weekly volume in December 2024, but has since decreased to around 20% by October 2025, with an estimated $4.5 billion worth of trades potentially classified as wash transactions. https://decrypt.co/347842/columbia-study-25-polymarket-volume-wash-trading <!-- Story curated by me. Draft summary by Leo/Llama 3.1 8B --> ([Decrypt]())
 
+- **Financial markets' recent swings have hit crypto treasury companies hard.** Companies like Michael Saylor's Strategy and Peter Thiel's BitMine Immersion Technologies have seen their shares decline by up to 30% in the past month. ([Wall Street Journal](https://www.wsj.com/finance/currencies/the-years-hottest-crypto-trade-is-crumbling-43e8bab5?st=gZYe72&reflink=desktopwebshare_permalink)) <!-- Story curated by me -->
 
-- Researchers at Columbia University have found that a quarter of trades on Polymarket, a popular prediction platform, may be the result of wash trading, a practice where users artificially inflate activity to qualify for rewards. This suspicious activity peaked at nearly 60% of weekly volume in December 2024, but has since decreased to around 20% by October 2025, with an estimated $4.5 billion worth of trades potentially classified as wash transactions. https://decrypt.co/347842/columbia-study-25-polymarket-volume-wash-trading <!-- Story curated by me. Draft summary by Leo/Llama 3.1 8B -->
+- **Hedge fund manager Michael Burry** disclosed a $1.1 billion short position against AI darlings Nvidia and Palantir Technologies, citing concerns over market bubbles and "circular financing" in the tech industry. The revelation raised eyebrows around Wall Street, where Burry became renowned for his early bets on the 2008 housing crisis, portrayed in the movie The Big Short. ([Decrypt](https://decrypt.co/347888/big-short-guy-bet-1-1-billion-against-ai-giants-markets-still-absorbing)) <!-- Story curated by me --> 
 
-- OpenAI's CEO Sam Altman has been caught contradicting himself regarding the company's desire for government support, with a letter to the White House requesting federal loan guarantees for AI infrastructure on October 27, directly contradicting his public statements claiming the company doesn't want government backing. The letter, which remains publicly available, has sparked backlash from government officials and experts, highlighting concerns about Altman's candor and governance decisions at the company. https://decrypt.co/347866/openai-sought-government-loan-guarantees-sam-altman-denial <!-- Story curated by me. Draft summary by Leo/Llama 3.1 8B -->
-
-- Crypto treasury companies, which invest in cryptocurrencies like bitcoin and ether, are experiencing a significant downturn as prices of these digital tokens fall. Companies like Strategy, backed by Michael Saylor, and BitMine Immersion Technologies, backed by Peter Thiel, have seen their shares decline by up to 30% in the past month, with some analysts predicting that the premium investors pay for these companies will eventually compress. https://www.wsj.com/finance/currencies/the-years-hottest-crypto-trade-is-crumbling-43e8bab5?st=gZYe72&reflink=desktopwebshare_permalink <!-- Story curated by me. Draft summary by Leo/Llama 3.1 8B -->
-
-
-
-
-
-
+- **OpenAI CEO Sam Altman** has been caught contradicting himself regarding the company's desire for government support, with a letter to the White House requesting federal loan guarantees for AI infrastructure on October 27, directly contradicting his public statements claiming the company doesn't want government backing. The letter, which remains publicly available, has sparked backlash from government officials and experts, highlighting concerns about Altman's candor and governance decisions at the company. ([Decrypt]()) https://decrypt.co/347866/openai-sought-government-loan-guarantees-sam-altman-denial <!-- Story curated by me. Draft summary by Leo/Llama 3.1 8B -->
 
 <!--
-
 
 - **Apple has somehow staved off** tariff-related disaster this year. ([Wall Street Journal](https://www.wsj.com/tech/apple-2025-tim-cook-36af914a?st=YwMB3F&reflink=desktopwebshare_permalink))
 
@@ -57,9 +57,6 @@ A critical new study revealed that current general-purpose AI assistants, when a
 <!--
 **Japan Regulators Greenlight Banks for Stablecoin Issuance**
     Japan's financial regulator has moved to support the country's three largest banks in their plans to issue stablecoins. This landmark regulatory step in a major G7 economy is expected to dramatically accelerate the institutional adoption of blockchain technology for finance, setting a new precedent for how traditional banking systems integrate with digital assets. **Source:** CoinDesk (Cited by Blockchain.com) **Link:** [Japan Regulator to Support Country's 3 Largest Banks in Stablecoin Issuance](https://www.blockchain.com/explorer/news) (Note: The specific CoinDesk article is cited within this link.) <!-- Gemini | - **Polygon & fintech startup Anq developing sovereign-backed Indian “stablecoin” model tied to government securities**
-  [https://timesofindia.indiatimes.com/technology/tech-news/polygon-anq-developing-sovereign-backed-indian-stablecoin-model-tied-to-government-securities-say-sources/articleshow/125105642.cms](https://timesofindia.indiatimes.com/technology/tech-news/polygon-anq-developing-sovereign-backed-indian-stablecoin-model-tied-to-government-securities-say-sources/articleshow/125105642.cms)
-  This initiative in India would link a blockchain-token (tentatively the “Asset Reserve Certificate” or ARC) to government securities/Treasury Bills, representing a hybrid of public-finance and blockchain innovation. A strong signal of where tokenisation meets sovereign infrastructure.
-  ([The Times of India][6])[6]: https://timesofindia.indiatimes.com/technology/tech-news/polygon-anq-developing-sovereign-backed-indian-stablecoin-model-tied-to-government-securities-say-sources/articleshow/125105642.cms?utm_source=chatgpt.com "Polygon, Anq developing sovereign-backed Indian 'stablecoin' model tied to government securities, say sources" <!-- ChatGPT
 
 - **Kazakhstan Plans $1 Billion National Crypto Reserve Fund**
 <!--
@@ -67,17 +64,6 @@ A critical new study revealed that current general-purpose AI assistants, when a
     * **Source:** The Block (citing Bloomberg)
     * **Link:** [Kazakhstan to launch $1 billion crypto reserve fund using seized assets by 2026: Bloomberg](https://www.theblock.co/) <!-- Gemini
 
-- **Bank of England urges closer UK–US stablecoin collaboration**
-<!--
-  [https://www.reuters.com/sustainability/boards-policy-regulation/bank-englands-breeden-bangs-drum-uk-us-stablecoin-collaboration-2025-11-05/](https://www.reuters.com/sustainability/boards-policy-regulation/bank-englands-breeden-bangs-drum-uk-us-stablecoin-collaboration-2025-11-05/)
-  The BoE’s deputy governor Sarah Breeden emphasised the “really important” need for the U.K. and the U.S. to align on regulation of stablecoins. This underscores how regulatory convergence (or divergence) is becoming a frontline issue in the token-economy.
-  ([Reuters][4])[4]: https://www.reuters.com/sustainability/boards-policy-regulation/bank-englands-breeden-bangs-drum-uk-us-stablecoin-collaboration-2025-11-05/?utm_source=chatgpt.com "Bank of England's Breeden urges closer UK-US stablecoin collaboration" <!-- ChatGPT
-
-- **Japan’s crypto players jostle for market share on hopes of regulatory easing**
-<!--
-  [https://www.reuters.com/business/finance/japans-crypto-players-jostle-market-share-regulatory-easing-hopes-2025-11-04/](https://www.reuters.com/business/finance/japans-crypto-players-jostle-market-share-regulatory-easing-hopes-2025-11-04/)
-  As Japan signals possible regulatory loosening, crypto firms are positioning aggressively in its market. The story highlights the dynamic interplay between regulation and blockchain business growth in the Asia region.
-  ([Reuters][5])[5]: https://www.reuters.com/business/finance/japans-crypto-players-jostle-market-share-regulatory-easing-hopes-2025-11-04/?utm_source=chatgpt.com "Japan's crypto players jostle for market share on regulatory easing hopes" <!-- ChatGPT
 
 - **Microsoft's AI Investments:**
 <!-- Microsoft signed a $\$9.7$ billion cloud services agreement with Australian AI infrastructure provider IREN to secure access to Nvidia chips, aiming to bolster its capacity to meet surging AI demand. This deal, along with a revised agreement with **OpenAI**, briefly pushed Microsoft's valuation to $\$4$ trillion for the second time this year. Furthermore, Microsoft plans to ship over 60,000 Nvidia Blackwell AI chips to the United Arab Emirates for use in data centers. <!-- Gemini
@@ -90,20 +76,7 @@ A critical new study revealed that current general-purpose AI assistants, when a
 
 - [SLB launches new AI tool “Tela” to serve energy-industry workflows](https://www.reuters.com/business/energy/slb-launches-new-ai-product-it-focuses-digital-sales-growth-2025-11-03/)
 <!--
-— Reuters, Nov 3 2025. *Why it matters:* Demonstrates how AI is moving beyond hype into domain-specific deployment (energy/oil services) — showing the “enterprise operational” phase rather than just pilot projects. ([Reuters][2]) [2]: https://www.reuters.com/business/energy/slb-launches-new-ai-product-it-focuses-digital-sales-growth-2025-11-03/?utm_source=chatgpt.com "SLB launches new AI product as it focuses on digital sales ..." <!-- ChatGPT -->
-
-
-
-
-
-
-
-
-
-
-
-
-<!-- Leftovers...
+— Reuters, Nov 3 2025. *Why it matters:* Demonstrates how AI is moving beyond hype into domain-specific deployment (energy/oil services) — showing the “enterprise operational” phase rather than just pilot projects. ([Reuters][2]) [2]: https://www.reuters.com/business/energy/slb-launches-new-ai-product-it-focuses-digital-sales-growth-2025-11-03/?utm_source=chatgpt.com "SLB launches new AI product as it focuses on digital sales ..." <!-- ChatGPT 
 
 - **Amazon sues Perplexity AI over “agentic” shopping tool** Amazon filed a lawsuit accusing Perplexity of deploying an AI-agent that accessed Amazon customer accounts disguised as human browsing. The dispute spotlights how “agentic” AI (AI that acts autonomously on behalf of users) is beginning to clash with platform policies, security concerns and the question of how such tools are regulated. ([Reuters](https://www.reuters.com/business/retail-consumer/perplexity-receives-legal-threat-amazon-over-agentic-ai-shopping-tool-2025-11-04/))
 
@@ -200,26 +173,17 @@ A critical new study revealed that current general-purpose AI assistants, when a
 
 ### Looking Ahead
 
-- Bill Gates is urging world leaders to shift the focus of the global climate fight from curbing emissions to reducing human suffering, arguing that innovation in clean energy can help alleviate poverty and prevent disease. https://wapo.st/4oT0BCk <!-- Story curated by me. Draft summary by Leo/Llama 3.1 8B -->
+- **Ahead of this week's COP30 climate summit,** Bill Gates [urged world leaders](https://www.gatesnotes.com/work/accelerate-energy-innovation/reader/three-tough-truths-about-climate) to shift focus from hitting near-term targets for emission reductions. Instead, Gates says it would be better to focus on limiting climate-related suffering, especially among people in the world's poorest countries. <!-- Me -->
 
-- **McKinsey Reports on AI Agent Adoption and Scaling Challenges**
-    A major global survey from McKinsey revealed that while 88% of organizations now report using AI in at least one business function, most are still struggling to scale AI programs across the enterprise, remaining in the experimentation or piloting phase. The survey also highlighted that 62% of organizations are experimenting with **AI agents**—systems that can autonomously plan and execute multi-step workflows—indicating agents are the next major focus area for corporate AI investment.
-    * **Source:** McKinsey
-    * **Link:** [The state of AI in 2025: Agents, innovation, and transformation](https://www.mckinsey.com/capabilities/quantumblack/our-insights/the-state-of-ai) <!-- Gemini
+- **Consulting giant McKinsey & Co. published** a major new global survey on [enterprise AI adoption](https://www.mckinsey.com/capabilities/quantumblack/our-insights/the-state-of-ai). Among the findings: 88% of organizations now report using AI in at least one business function. But most are still struggling to scale AI programs beyond early experimentation. <!-- Gemini -->
 
-- **AI and Economic Warnings:**
- Goldman Sachs** CEO David Solomon warned about the U.S.'s $38 trillion national debt, stating that accelerating economic growth—specifically one led by AI—is the key factor to resolve the issue. Separately, the "Godfather of AI," Geoffrey Hinton, cautioned that while tech billionaires like Elon Musk could see substantial financial gains, unchecked AI adoption will likely lead to widespread job losses due to automation. <!-- Gemini | *Goldman Sachs / JPMorgan* | **AI-led growth offers ‘way out’: Goldman Sachs CEO David Solomon joins JPMorgan’s Jamie Dimon on US national debt problem** | [https://timesofindia.indiatimes.com/technology/tech-news/ai-led-growth-offers-way-out-goldman-sachs-ceo-david-solomon-joins-jpmorgans-jamie-dimon-on-ais-dark-future/articleshow/125064010.cms](https://www.google.com/search?q=https://timesofindia.indiatimes.com/technology/tech-news/ai-led-growth-offers-way-out-goldman-sachs-ceo-david-solomon-joins-jpmorgans-jamie-dimon-on-ais-dark-future/articleshow/125064010.cms) |
-
-- **The AI Boom's Mind-Boggling Valuations Reshape Global Economy**
-
-    The financial scale of the AI boom continues to shatter records, driving up the valuations of the world's largest tech firms. Nvidia reached an unprecedented **$5 trillion** market valuation, while Microsoft and Apple both hit $4 trillion in valuation. Furthermore, the major tech giants—including Google's parent company, which reported its first $100 billion quarter—have all revised their capital expenditure figures upward, committing billions more to build out the foundational infrastructure for future AI development. **Source:** The Guardian  **Link:** [The mind-boggling valuations of AI companies](https://www.theguardian.com/global/2025/nov/04/the-mind-boggling-valuations-of-ai-companies) <!-- Gemini  | *Bloomberg Wall Street* | **“Musk will get richer and a lot of people will get unemployed…”: Geoffrey Hinton warns on AI’s dark future** | [https://timesofindia.indiatimes.com/technology/tech-news/musk-will-get-richer-and-a-lot-of-people-will-get-unemployed-geoffrey-hinton-warns-on-ais-dark-future/articleshow/125075257.cms](https://timesofindia.indiatimes.com/technology/tech-news/musk-will-get-richer-and-a-lot-of-people-will-get-unemployed-geoffrey-hinton-warns-on-ais-dark-future/articleshow/125075257.cms) -->
-
-
+- **The Guardian's TechScape newsletter highlighted** some recently reported [market stats](https://www.theguardian.com/global/2025/nov/04/the-mind-boggling-valuations-of-ai-companies) that demonstrate the truly dizzying financial scale of the AI boom. Behold Nvidia's $5 trillion valuation, Microsoft and Apple at $4 trillion each, Alphabet's first-ever quarter with $100 billion in revenue, and $600 billion in newly announced deals to expand computing capacity. Yowza. <!-- Gemini -->
+ 
 ### Odds & Ends
 
-- **Tesla shareholders approved an all-stock compensation package** for CEO Elon Musk that could make him the [world's first trillionaire](https://www.npr.org/2025/11/06/nx-s1-5596440/tesla-musk-2025-trillion-dollar-compensation-vote) if he can steer the company to hit specific milestones over the next decade. All he needs to do now is boost the share price so Tesla becomes nearly twice as valuable as the largest public company [ever traded](https://www.forbes.com/sites/tylerroush/2025/10/29/nvidia-becomes-first-company-worth-5-trillion/) to date; successfully pivot Tesla's revenue model away from the capital-intensive aspects of being a carmaker; do so while splitting time across several other ventures that provide zero value to Tesla, including occasionally playing [de facto co-president](https://en.wikipedia.org/wiki/Political_activities_of_Elon_Musk) of the United States and running X, which also occupies an inordinate amount of his time by dint of his posting to it [all damn day long](https://www.statswithsasa.com/2025/02/12/elon-musk-twitter-habits/); and avoid dying before the decade is up from his [voluminously well-documented drug habit](https://www.wsj.com/tech/elon-musk-tesla-money-drugs-board-61af9ac4?st=BAErjr&reflink=desktopwebshare_permalink), à la actor [Matthew Perry](https://www.nbcnews.com/news/us-news/depths-matthew-perrys-addiction-6-8-shots-day-55k-month-ketamine-rcna166806).
+- **Tesla shareholders approved an all-stock compensation package** for CEO Elon Musk that could make him the [world's first trillionaire](https://www.npr.org/2025/11/06/nx-s1-5596440/tesla-musk-2025-trillion-dollar-compensation-vote) if he can steer the company to hit specific milestones over the next decade. All he needs to do now is boost the share price so Tesla becomes nearly twice as valuable as the largest public company [ever traded](https://www.forbes.com/sites/tylerroush/2025/10/29/nvidia-becomes-first-company-worth-5-trillion/) to date; successfully pivot Tesla's revenue model away from the capital-intensive aspects of being a carmaker; do so while splitting time across several other ventures that provide zero value to Tesla, including occasionally playing [de facto co-president](https://en.wikipedia.org/wiki/Political_activities_of_Elon_Musk) of the United States and running X, which also occupies an inordinate amount of his time by dint of his posting to it [all damn day long](https://www.statswithsasa.com/2025/02/12/elon-musk-twitter-habits/); and avoid dying before the decade is up from his voluminously [well-documented drug habit](https://www.wsj.com/tech/elon-musk-tesla-money-drugs-board-61af9ac4?st=BAErjr&reflink=desktopwebshare_permalink), à la actor [Matthew Perry](https://www.nbcnews.com/news/us-news/depths-matthew-perrys-addiction-6-8-shots-day-55k-month-ketamine-rcna166806).
 
-- **Safe to color me skeptical** of the above scenario going as the Teslans hope, of course. But hey. Glad to check back on the situation later, right or wrong.
+- **Color me skeptical** the above scenario will go as the Teslans hope, of course. But hey. Glad to check back on the situation later, whether I'm proven right or wrong.
 
 _**That's it for now. Thanks for reading the newsletter today! If you want to know more about w3w's history and (ahem) the author, that info is available [here](https://w3wnews.substack.com/about).**_
 
