--- a/2025/2025-11-16-wir.md
+++ b/2025/2025-11-16-wir.md
@@ -6,17 +6,29 @@
 
 **Lead item goes here.** Yadda yadda yadda. <!-- Followup on BTC vs gold -->
 
+- The Czech central bank just bout $1M in BTC, becoming first central bank to hold the token. https://www.reuters.com/business/czech-central-bank-buys-1-mln-bitcoin-other-crypto-assets-testing-2025-11-13/ <!-- PM -->
+
+- At a Yahoo Finance event on Thursday, Strategy founder Michael Saylor [predicted](https://markets.financialcontent.com/wral/article/breakingcrypto-2025-11-14-michael-saylor-bitcoin-to-eclipse-gold-by-2035-but-market-reacts-with-caution) that bitcoin will surpass gold's market capitalization by 2035.  <!-- PM -->
+
+- Does BTC's dip below $100K mean crypto is in a bear market? https://decrypt.co/348667/as-bitcoin-plunges-below-95k-is-crypto-in-a-bear-market  <!-- PM -->
+
+- **Bitcoin Price Drops Below $100,000 to Lowest Level Since May** Bitcoin's price plunged sharply this week, falling below the $100,000 mark—a psychological barrier not breached since early Q2. Analysts attribute the volatility to a mix of bearish macroeconomic news, persistent outflows from U.S. spot Bitcoin ETFs, and the continuing regulatory uncertainty surrounding the upcoming U.S. market structure legislation in the Senate.
+[CoinDesk Bitcoin Price Index Lost 3.39% to $98076.07, Lowest 4 p.m. Level Since May 2025 — Data Talk](https://www.morningstar.com/news/dow-jones/2025111313019/coindesk-bitcoin-price-index-lost-339-to-9807607-lowest-4-pm-level-since-may-2025-data-talk) (Dow Jones via Morningstar, Nov 13, 2025) <!-- Google Gemini -->
+
 ### Week in Review: Nov. 9-15, 2025
 
-- Famed shortseller Jim Chanos unwound his bearish bet on Strategy. ([]()) <!-- Link TK -->
+- **Anthropic said it discovered** an entirely AI-generated cyberattack from China targeting at least 30 organizations. This marks the first documented case of a large-scale cyberattack executed without substantial human input. ([TechRadar](https://www.techradar.com/pro/security/anthropic-claims-chinese-hackers-hijacked-claude-to-launch-ai-orchestrated-and-automated-cyberattacks)) <!-- Google Gemini -->
 
-- Bloomberg: Ripple crossed a $40 billion valuation. ([]()) <!-- Link TK -->
+- **Wall Street updates:** Renowned shortseller Jim Chanos said he has unwound a highly profitable bearish bet on Strategy. ([Financial Times](https://news.google.com/read/CBMicEFVX3lxTE1SNXBPMUJLNGdCbW11RjE2NkFPWWEyUDFkZnRfQmx4bkpCdXVONzc4SjlLdC03Sk43cjNfSXlGTzM4cENLbWlOZTJvY3ZBNno1dDhYd0hELVU0NUQyaVphXzdraENMdGxRTUZOekVwZ2M?hl=en-US&gl=US&ceid=US%3Aen)) <!-- PM --> | Ripple said it has raised $500 million** in a new venture investment round that values the company at $40 billion in full. ([CNBC](https://www.cnbc.com/2025/11/05/ripple-gets-40-billion-valuation-after-500-million-funding-round.html)) <!-- PM --> | **Community Bankers Ask OCC to Block Sony's Crypto Bank Ambitions** A coalition of community banks has formally petitioned the Office of the Comptroller of the Currency (OCC) to reject Sony's application for a federal banking charter, which the technology giant intends to use to offer crypto-related banking services. The move highlights the escalating tension between traditional financial institutions and tech companies seeking to integrate digital assets into core financial infrastructure.
+[Community Bankers Ask OCC to Block Sony's Crypto Bank Ambitions](https://decrypt.co/news-explorer?pinned=1230382&title=solana-company-to-tokenize-shares-on-superstates-opening-bell) (Decrypt, Nov 14, 2025) <!-- Google Gemini -->
 
-- WSJ's Weil on public disclosure of MSFT deals with OpenAI: https://www.wsj.com/tech/ai/microsofts-dealings-with-openai-still-need-a-lot-more-sunlight-f001cb19?st=jcE2Q4&reflink=desktopwebshare_permalink <!-- Curated by me. -->
+- **OpenAI asked a federal judge in New York** to reverse a recent court order to turn over 20 million anonymized ChatGPT chat logs in a copyright infringement lawsuit brought by the New York Times and other news outlets, citing concerns that it would expose users' private conversations. ([Reuters](https://www.reuters.com/business/media-telecom/openai-fights-order-turn-over-millions-chatgpt-conversations-2025-11-12/)) <!-- PM -->
 
-- tk ([]())
+- **Apple and Google's Billion-Dollar Deal to Power Siri Remains a 'Secret'** New details emerged regarding the highly secretive deal for Apple to use Google's Gemini AI engine to power a major overhaul of Siri. The partnership is valued at a reported $1 billion and has sparked concerns among regulators and competitors alike, highlighting the intense, behind-the-scenes competition between the tech giants to dominate the consumer AI agent market.
+[Why Apple wants to keep this billion-dollar deal with Google a 'secret'](https://timesofindia.indiatimes.com/technology/tech-news/why-apple-wants-to-keep-this-billion-dollar-deal-with-google-a-secret/articleshow/125221920.cms) (Times of India, Nov 10, 2025) <!-- Google Gemini -->
 
-- tk ([]())
+- **APAC Digital Asset Adoption Surges, Driven by Stablecoins and Remittances** A new report from CoinDesk's Consensus event highlights that nearly one in four adults (535 million people) in the Asia-Pacific region now use digital assets, significantly outpacing global adoption. The surge is primarily powered by the use of stablecoins for remittances and mobile-first finance, driven by regulatory clarity and the need to bypass high fees in traditional cross-border payments.
+[Nearly One in Four Adults in Asia-Pacific - Around 535m People - Use Digital Assets, Driven by Stablecoins and Remittances, New Consensus Report Finds](https://www.prnewswire.com/apac/news-releases/nearly-one-in-four-adults-in-asia-pacific---around-535m-people---use-digital-assets-driven-by-stablecoins-and-remittances-new-consensus-report-finds-302615091.html) (PR Newswire via CoinDesk Consensus, Nov 14, 2025) <!-- Google Gemini -->
 
 ### Market Snapshot
 
@@ -75,14 +87,18 @@
 
 ### Looking Ahead
 
-- tk ([]())
-- tk ([]())
-- tk ([]())
+- **The Senate Agriculture Committee released** its initial draft of a bill to broadly restructure regulation of crypto markets in the U.S.
+The draft, which follows a comprehensive stablecoin law passed earlier this year, seeks to clarify the roles of different federal agencies in overseeing crypto trading. It also would create new rules to mitigate conflicts of interest in the industry. ([CoinGeek](https://coingeek.com/us-senate-ag-committee-releases-market-structure-draft/)) <!-- Google Gemini -->
+
+- **Microsoft's vague public disclosures regarding its financial relationship with OpenAI** are making Wall Street Journal accounting reporter Jonathan Weil's head hurt. That's my educated guess, at least, speaking as Jon's former cubicle mate after reading his latest, [characteristically thorough story](https://www.wsj.com/tech/ai/microsofts-dealings-with-openai-still-need-a-lot-more-sunlight-f001cb19?st=jcE2Q4&reflink=desktopwebshare_permalink) on the topic. <!-- PM -->
+
+- **Moonshot AI,** a Beijing-based startup, says its K2 language model outperformed both OpenAI's GPT-5 and Anthropic's Claude Sonnet 4.5 in early testing entailing complex, multi-step reasoning tasks. The announcement underscores China's growing competition with America's major AI players. ([VentureBeat](https://venturebeat.com/ai/moonshots-kimi-k2-thinking-emerges-as-leading-open-source-ai-outperforming)) <!-- Google Gemini -->
 
 ### Odds & Ends
 
-- tk ([]())
-- tk ([]())
+- **"Moonlighting" is so 1988.** The modern term you're looking for is ["polyworking,"](https://ca.style.yahoo.com/workers-side-jobs-combat-stagnant-150315633.html) says the AP's Cathy Bussewitz. <!-- Me -->
+
+- **Good to know!** Researchers at the University of British Columbia have published a study claiming to have mathematically proven that the universe is real, not a simulation. ([Popular Mechanics](https://www.popularmechanics.com/science/math/a69239099/not-in-a-simulation/)) <!-- Me -->
 
 _**That's it for now. Thanks for reading the newsletter today! If you want to know more about w3w's history and (ahem) the author, that info is available [here](https://w3wnews.substack.com/about).**_
 
