--- a/2025/2025-11-16-wir.md
+++ b/2025/2025-11-16-wir.md
@@ -17,18 +17,15 @@
 
 ### Week in Review: Nov. 9-15, 2025
 
-- **Anthropic said it discovered** an entirely AI-generated cyberattack from China targeting at least 30 organizations. This marks the first documented case of a large-scale cyberattack executed without substantial human input. ([TechRadar](https://www.techradar.com/pro/security/anthropic-claims-chinese-hackers-hijacked-claude-to-launch-ai-orchestrated-and-automated-cyberattacks)) <!-- Google Gemini -->
+- **Yikes.** Anthropic said it discovered an AI-generated cyberattack from China targeting at least 30 organizations. This marks the first documented case of a large-scale cyberattack executed without substantial human input. ([TechRadar](https://www.techradar.com/pro/security/anthropic-claims-chinese-hackers-hijacked-claude-to-launch-ai-orchestrated-and-automated-cyberattacks)) <!-- Google Gemini -->
 
-- **Wall Street updates:** Renowned shortseller Jim Chanos said he has unwound a highly profitable bearish bet on Strategy. ([Financial Times](https://news.google.com/read/CBMicEFVX3lxTE1SNXBPMUJLNGdCbW11RjE2NkFPWWEyUDFkZnRfQmx4bkpCdXVONzc4SjlLdC03Sk43cjNfSXlGTzM4cENLbWlOZTJvY3ZBNno1dDhYd0hELVU0NUQyaVphXzdraENMdGxRTUZOekVwZ2M?hl=en-US&gl=US&ceid=US%3Aen)) <!-- PM --> | Ripple said it has raised $500 million** in a new venture investment round that values the company at $40 billion in full. ([CNBC](https://www.cnbc.com/2025/11/05/ripple-gets-40-billion-valuation-after-500-million-funding-round.html)) <!-- PM --> | **Community Bankers Ask OCC to Block Sony's Crypto Bank Ambitions** A coalition of community banks has formally petitioned the Office of the Comptroller of the Currency (OCC) to reject Sony's application for a federal banking charter, which the technology giant intends to use to offer crypto-related banking services. The move highlights the escalating tension between traditional financial institutions and tech companies seeking to integrate digital assets into core financial infrastructure.
-[Community Bankers Ask OCC to Block Sony's Crypto Bank Ambitions](https://decrypt.co/news-explorer?pinned=1230382&title=solana-company-to-tokenize-shares-on-superstates-opening-bell) (Decrypt, Nov 14, 2025) <!-- Google Gemini -->
+- **Ripple said it has raised $500 million** in a new venture investment round that values the company at $40 billion in full. The company, whose XRP token is currently the world's fourth-largest by market capitalization, has been pushing into new lines of business recently, including crypto custody and prime brokerage. ([CNBC](https://www.cnbc.com/2025/11/05/ripple-gets-40-billion-valuation-after-500-million-funding-round.html)) <!-- PM -->
+
+- **Renowned shortseller Jim Chanos** said he has unwound what appears to be a highly profitable bearish bet on Strategy, spurred by his skepticism that its shares were trading at too high a premium to its bitcoin holdings. The move comes at a time when Wall Street has generally grown wary of so-called crypto treasury companies. ([Financial Times](https://news.google.com/read/CBMicEFVX3lxTE1SNXBPMUJLNGdCbW11RjE2NkFPWWEyUDFkZnRfQmx4bkpCdXVONzc4SjlLdC03Sk43cjNfSXlGTzM4cENLbWlOZTJvY3ZBNno1dDhYd0hELVU0NUQyaVphXzdraENMdGxRTUZOekVwZ2M?hl=en-US&gl=US&ceid=US%3Aen)) <!-- PM -->
 
 - **OpenAI asked a federal judge in New York** to reverse a recent court order to turn over 20 million anonymized ChatGPT chat logs in a copyright infringement lawsuit brought by the New York Times and other news outlets, citing concerns that it would expose users' private conversations. ([Reuters](https://www.reuters.com/business/media-telecom/openai-fights-order-turn-over-millions-chatgpt-conversations-2025-11-12/)) <!-- PM -->
 
-- **Apple and Google's Billion-Dollar Deal to Power Siri Remains a 'Secret'** New details emerged regarding the highly secretive deal for Apple to use Google's Gemini AI engine to power a major overhaul of Siri. The partnership is valued at a reported $1 billion and has sparked concerns among regulators and competitors alike, highlighting the intense, behind-the-scenes competition between the tech giants to dominate the consumer AI agent market.
-[Why Apple wants to keep this billion-dollar deal with Google a 'secret'](https://timesofindia.indiatimes.com/technology/tech-news/why-apple-wants-to-keep-this-billion-dollar-deal-with-google-a-secret/articleshow/125221920.cms) (Times of India, Nov 10, 2025) <!-- Google Gemini -->
-
-- **APAC Digital Asset Adoption Surges, Driven by Stablecoins and Remittances** A new report from CoinDesk's Consensus event highlights that nearly one in four adults (535 million people) in the Asia-Pacific region now use digital assets, significantly outpacing global adoption. The surge is primarily powered by the use of stablecoins for remittances and mobile-first finance, driven by regulatory clarity and the need to bypass high fees in traditional cross-border payments.
-[Nearly One in Four Adults in Asia-Pacific - Around 535m People - Use Digital Assets, Driven by Stablecoins and Remittances, New Consensus Report Finds](https://www.prnewswire.com/apac/news-releases/nearly-one-in-four-adults-in-asia-pacific---around-535m-people---use-digital-assets-driven-by-stablecoins-and-remittances-new-consensus-report-finds-302615091.html) (PR Newswire via CoinDesk Consensus, Nov 14, 2025) <!-- Google Gemini -->
+- **Microsoft's vague public disclosures regarding its financial relationship with OpenAI** are making Wall Street Journal accounting reporter Jonathan Weil's head hurt. That's my educated guess, at least, speaking as Jon's former cubicle mate after reading his latest, [characteristically thorough story](https://www.wsj.com/tech/ai/microsofts-dealings-with-openai-still-need-a-lot-more-sunlight-f001cb19?st=jcE2Q4&reflink=desktopwebshare_permalink) on the topic. 😂 <!-- PM -->
 
 ### Market Snapshot
 
@@ -48,33 +45,33 @@
   <tbody>
     <tr>
       <td><a href="https://coinmarketcap.com/currencies/bitcoin/">Bitcoin</a></td>
-      <td>$</td>
-      <td>+%</td>
-      <td>+%</td>
+      <td>$94,789.99</td>
+      <td>-8.6%</td>
+      <td>+1.0%</td>
     </tr>
     <tr>
       <td><a href="https://finance.yahoo.com/quote/GC%3DF?p=GC%253DF">Gold</a></td>
-      <td>$/oz</td>
-      <td>+%</td>
-      <td>+%</td>
+      <td>$4,084.40</td>
+      <td>+1.9%</td>
+      <td>+55.3%</td>
     </tr>
     <tr>
       <td><a href="https://finance.yahoo.com/quote/DX-Y.NYB?p=DX-Y.NYB&.tsrc=fin-srch">USD Index</a></td>
-      <td></td>
-      <td>-%</td>
-      <td>-%</td>
+      <td>99.27</td>      
+      <td>-0.3%</td>
+      <td>-8.5%</td>
     </tr>
     <tr>
       <td><a href="https://finance.yahoo.com/quote/%5ETNX/">10-yr U.S. <br>Treasury Yield</a></td>
-      <td>%</td>
-      <td>-</td>
-      <td>-</td>
+      <td>4.148%</td>
+      <td>+0.055</td>
+      <td>-0.425</td>
     </tr>
     <tr>
       <td><a href="https://finance.yahoo.com/quote/%5ENDX/components?p=%255ENDX">Nasdaq 100</a></td>
-      <td></td>
-      <td>+%</td>
-      <td>+%</td>
+      <td>25,008.24</td>
+      <td>-0.2%</td>
+      <td>+19.0%</td>
     </tr>
     <tr>
       <td><a href="https://www.msci.com/indexes/index/899901">MSCI All-Country <br>World Index (ex US)</a></td>
@@ -87,10 +84,9 @@
 
 ### Looking Ahead
 
-- **The Senate Agriculture Committee released** its initial draft of a bill to broadly restructure regulation of crypto markets in the U.S.
-The draft, which follows a comprehensive stablecoin law passed earlier this year, seeks to clarify the roles of different federal agencies in overseeing crypto trading. It also would create new rules to mitigate conflicts of interest in the industry. ([CoinGeek](https://coingeek.com/us-senate-ag-committee-releases-market-structure-draft/)) <!-- Google Gemini -->
+- **The Senate Agriculture Committee released** its initial draft of a bill to broadly restructure regulation of crypto markets in the U.S. The draft, which follows a comprehensive stablecoin law passed earlier this year, seeks to clarify the roles of different federal agencies in overseeing crypto trading. It also would create new rules to mitigate conflicts of interest in the industry. ([CoinGeek](https://coingeek.com/us-senate-ag-committee-releases-market-structure-draft/)) <!-- Google Gemini -->
 
-- **Microsoft's vague public disclosures regarding its financial relationship with OpenAI** are making Wall Street Journal accounting reporter Jonathan Weil's head hurt. That's my educated guess, at least, speaking as Jon's former cubicle mate after reading his latest, [characteristically thorough story](https://www.wsj.com/tech/ai/microsofts-dealings-with-openai-still-need-a-lot-more-sunlight-f001cb19?st=jcE2Q4&reflink=desktopwebshare_permalink) on the topic. <!-- PM -->
+- **Apple will pay Google approximately $1 billion a year** to access the search giant’s AI technology to power its Siri voice assistant. The deal highlights Apple's lag in developing AI tools of its own compared to other Silicon Valley hegemons. ([CNET](https://www.cnet.com/tech/services-and-software/apple-to-reportedly-pay-google-1-billion-a-year-for-siris-custom-gemini-ai-model/)) <!-- Google Gemini -->
 
 - **Moonshot AI,** a Beijing-based startup, says its K2 language model outperformed both OpenAI's GPT-5 and Anthropic's Claude Sonnet 4.5 in early testing entailing complex, multi-step reasoning tasks. The announcement underscores China's growing competition with America's major AI players. ([VentureBeat](https://venturebeat.com/ai/moonshots-kimi-k2-thinking-emerges-as-leading-open-source-ai-outperforming)) <!-- Google Gemini -->
 
@@ -106,4 +102,4 @@ _**Please note, I regularly use several AI apps to assist production of w3w. But
 
 _**If you need to reach me directly, please email peter[at]w3w[dot]media.**_
 
-_**Best wishes for a healthy and productive week ahead.**_ 😊
+_**Best wishes for a healthy and productive week ahead.**_
