Writing through lead item

--- a/2025/2025-11-16-wir.md
+++ b/2025/2025-11-16-wir.md
@@ -1,19 +1,40 @@
 # TKTK
 ## TKTK
 
-![A physical bitcoin token surrounded by gold nuggets](https://w3w.news/img/btc-gold-kanchanara-unsplash-3000.jpg)
+![A physical bitcoin token surrounded by gold nuggets](https://w3w.news/img/gold1-kanchanara-3000.jpg)
 *Photo by Kanchanara via [Unsplash](https://unsplash.com/@kanchanara)*
 
-**Lead item goes here.** Yadda yadda yadda. <!-- Followup on BTC vs gold -->
+**There is an ongoing, sometimes heated nerdfight** between bitcoiners and gold bugs. For anyone blissfully unaware of this, as sane people generally are, some background:
 
-- The Czech central bank just bout $1M in BTC, becoming first central bank to hold the token. https://www.reuters.com/business/czech-central-bank-buys-1-mln-bitcoin-other-crypto-assets-testing-2025-11-13/ <!-- PM -->
+Fans of each asset dispute whose preferred form of money is more fit to replace the mutually detested U.S. dollar as a [store of value](https://www.investopedia.com/terms/s/storeofvalue.asp) and a global financial standard. Bitcoin lays claim to being both limited in supply and digitally native, thus arguably more relevant to a modern, internet-driven economy. By contrast, gold's scarcity stems from its physical tangibility. Plus it has a much longer track record as a monetary asset, going back hundreds of years.
 
-- At a Yahoo Finance event on Thursday, Strategy founder Michael Saylor [predicted](https://markets.financialcontent.com/wral/article/breakingcrypto-2025-11-14-michael-saylor-bitcoin-to-eclipse-gold-by-2035-but-market-reacts-with-caution) that bitcoin will surpass gold's market capitalization by 2035.  <!-- PM -->
+If you spend any time whatsoever talking to bitcoiners and gold bugs, as I have for more than two decades, it also quickly becomes noticeable that the two sides' [criticism of the dollar](https://blog.pmckay.com/posts/20251005-dedollarization.html) is exactly the same — that it's printed ad infinitum by Uncle Sam, thus inevitably devalued over time.
 
-- Does BTC's dip below $100K mean crypto is in a bear market? https://decrypt.co/348667/as-bitcoin-plunges-below-95k-is-crypto-in-a-bear-market  <!-- PM -->
+Yet in the mainstream press and on social media alike, we tend to discuss gold and bitcoin in terms of their dollar-denominated prices. What if we were to mathematically compare them directly to one another? Take the figurative and literal common denominator out of the mix and *really* get down to brass tacks.
 
-- **Bitcoin Price Drops Below $100,000 to Lowest Level Since May** Bitcoin's price plunged sharply this week, falling below the $100,000 mark—a psychological barrier not breached since early Q2. Analysts attribute the volatility to a mix of bearish macroeconomic news, persistent outflows from U.S. spot Bitcoin ETFs, and the continuing regulatory uncertainty surrounding the upcoming U.S. market structure legislation in the Senate.
-[CoinDesk Bitcoin Price Index Lost 3.39% to $98076.07, Lowest 4 p.m. Level Since May 2025 — Data Talk](https://www.morningstar.com/news/dow-jones/2025111313019/coindesk-bitcoin-price-index-lost-339-to-9807607-lowest-4-pm-level-since-may-2025-data-talk) (Dow Jones via Morningstar, Nov 13, 2025) <!-- Google Gemini -->
+In that spirit, I've been crunching [some historical data](https://docs.google.com/spreadsheets/d/1nsYpg7JdbduMge5YJ54BSEfU1EzdGSo5_VU-711tNBI/edit?usp=sharing) on the multiple of bitcoin's USD price to that of gold per ounce, based on weekly closes going back to 2010.
+
+Some factoids I've noticed so far, along with other recent bitcoin-related news of note:
+
+- **The all-time high in the bitcoin-gold multiple** was set in December 2024, when one bitcoin bought 38 ounces of gold. It has since retreated to 23.2 ounces, as of last week. That's a 14-month low.
+
+- **In bitcoin's early history,** following  publication of Satoshi Nakamoto's whitepaper in 2008, bitcoin traded for a long time at a fraction of gold's price per ounce. Their weekly closes first reached parity in February 2017, when both traded above $1,200. Then the multiple fluctuated above and below parity for a little while until April 2017. It's consistently stayed above 1.0 ever since.
+
+- **The first time the bitcoin-gold multiple posted a weekly finish above 20** was in January 2021.
+
+- **Since that milestone, the multiple's long-term low is 8.98.** That low was set in January 2023, during  the throes of the crypto market's post-FTX collapse.
+
+- **In dollar terms, bitcoin has been flagging lately** as traders have unwound riskier market bets due to concerns about the U.S. economy. The token [dipped below $100,000](https://www.morningstar.com/news/dow-jones/2025111313019/coindesk-bitcoin-price-index-lost-339-to-9807607-lowest-4-pm-level-since-may-2025-data-talk) last week for the first time since May.
+
+- **On a more promising note,** the Czech Republic's central bank [just bought](https://www.reuters.com/business/czech-central-bank-buys-1-mln-bitcoin-other-crypto-assets-testing-2025-11-13/)<!-- PM --> $1 million in bitcoin, becoming first global central bank to hold the token. By contrast, there is a looooooong history of central banks owning gold. If bitcoin can continue to elbow its way into this category of demand, that would be a very positive development for the token over the long haul.
+
+**Of course, the burning question** lurking between the lines above is what value the bitcoin-gold multiple might hold as a market signal for investors. I honestly don't know the answer  right now; I'm curious to do more analysis and have other sets of eyes [take a look at the data](https://docs.google.com/spreadsheets/d/1nsYpg7JdbduMge5YJ54BSEfU1EzdGSo5_VU-711tNBI/edit?usp=sharing) as well.
+
+That said, a high multiple should theoretically imply that gold is weak, and a low multiple should mean bitcoin is weak. If you apply that standard as a set of buying signals, the couple of long-term lows and highs I mentioned above would've worked very well in retrospect.
+
+If you had bought bitcoin at 2023's post-FTX low in the multiple, you would've made a 459% return to date. And if you had bought gold at the all-time high multiple in December 2024, that would've returned 53%.
+
+Hmmmm...
 
 ### Week in Review: Nov. 9-15, 2025
 
@@ -75,9 +96,9 @@
     </tr>
     <tr>
       <td><a href="https://www.msci.com/indexes/index/899901">MSCI All-Country <br>World Index (ex US)</a></td>
-      <td></td>
-      <td>+%</td>
-      <td>+%</td>
+      <td>1,085.67</td>
+      <td>+1.3%</td>
+      <td>+29.5%</td>
     </tr>
   </tbody>
 </table>
